# aEngine

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: aEngineConfig.cmake.in
docs/: API.md  BACKENDS.md  BUILD.md  INTEGRATION.md  RESOURCE_IO.md  THREADING_AND_ERRORS.md
include/aengine/: aengine.h  backends.h  export.h
samples/BasicPlayback/: main.cpp
src/Backends/All/: RegisterAllBackends.cpp
src/Backends/Miniaudio/: MiniaudioBackend.cpp
src/Backends/OpenAL/: OpenALAudioEngine.cpp  OpenALAudioEngine.h  RegisterOpenALBackend.cpp
src/Backends/XAudio2/: RegisterXAudio2Backend.cpp  XAudio2Backend.cpp  XAudio2Backend.h
src/Core/: AudioEngineBase.cpp  AudioEngineBase.h  BackendRegistry.cpp  Types.cpp
src/Platform/Windows/: DynamicLibrary.cpp  DynamicLibrary.h  MediaFoundationDecoder.cpp  MediaFoundationDecoder.h
